// Copyright 2015 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package svcconfig;

option go_package = "github.com/tetrafolium/luci-go/logdog/api/config/svcconfig";

// Storage is the in-transit storage configuration.
message Storage {
  // BigTable is the set of BigTable configuration parameters.
  message BigTable {
    // The name of the BigTable instance project.
    string project = 1;
    // The name of the BigTable instance.
    string instance = 2;

    // The name of the BigTable instance's log table.
    string log_table_name = 3;
  }

  // Type is the transport configuration that is being used.
  oneof Type {
    BigTable bigtable = 1;
  }

  reserved "max_log_age";
  reserved 2;
}
